--- a/sport_events/src/Infrastructure/sport_events.Infrastructure.Persistence/sport_events.Infrastructure.Persistence.csproj
+++ b/sport_events/src/Infrastructure/sport_events.Infrastructure.Persistence/sport_events.Infrastructure.Persistence.csproj
@@ -1,12 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Application\sport_events.Application.Abstractions\sport_events.Application.Abstractions.csproj"/>
+        <ProjectReference Include="..\..\Application\sport_events.Application.Abstractions\sport_events.Application.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Itmo.Dev.Platform.Postgres"/>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions"/>
+        <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
     </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Contexts\" />
+	</ItemGroup>
 
 </Project>
