--- a/sport_events/src/sport_events/appsettings.json
+++ b/sport_events/src/sport_events/appsettings.json
@@ -3,11 +3,11 @@
   "Infrastructure": {
     "Persistence": {
       "Postgres": {
-        "Host": "",
-        "Port": -1,
-        "Database": "",
-        "Username": "",
-        "Password": "",
+        "Host": "localhost",
+        "Port": 5432,
+        "Database": "database",
+        "Username": "root",
+        "Password": "ChangeMe",
         "SslMode": "Prefer",
         "Pooling": true
       }
