--- a/sport_events/src/Application/sport_events.Application.Abstractions/SportEvents.Application.Abstractions.csproj
+++ b/sport_events/src/Application/sport_events.Application.Abstractions/SportEvents.Application.Abstractions.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\sport_events.Application.Models\sport_events.Application.Models.csproj"/>
+        <ProjectReference Include="..\sport_events.Application.Models\SportEvents.Application.Models.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="SourceKit.Generators.Builder"/>
+        <PackageReference Include="SourceKit.Generators.Builder" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
 		<PackageReference Include="Itmo.Dev.Platform.Postgres" />
 		<PackageReference Include="Itmo.Dev.Platform.Common" />
