--- a/sport_events/src/Application/sport_events.Application.Contracts/SportEvents.Application.Contracts.csproj
+++ b/sport_events/src/Application/sport_events.Application.Contracts/SportEvents.Application.Contracts.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\sport_events.Application.Models\sport_events.Application.Models.csproj"/>
+        <ProjectReference Include="..\sport_events.Application.Models\SportEvents.Application.Models.csproj" />
     </ItemGroup>
 
     <ItemGroup>
