--- a/sport_events/src/Infrastructure/sport_events.Infrastructure.Persistence/SportEvents.Infrastructure.Persistence.csproj
+++ b/sport_events/src/Infrastructure/sport_events.Infrastructure.Persistence/SportEvents.Infrastructure.Persistence.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\..\Application\sport_events.Application.Abstractions\sport_events.Application.Abstractions.csproj" />
+        <ProjectReference Include="..\..\Application\sport_events.Application.Abstractions\SportEvents.Application.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -14,10 +14,6 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Contexts\" />
 	</ItemGroup>
 
 </Project>
