--- a/sport_events/src/Presentation/sport_events.Presentation.Http/SportEvents.Presentation.Http.csproj
+++ b/sport_events/src/Presentation/sport_events.Presentation.Http/SportEvents.Presentation.Http.csproj
@@ -5,7 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="Controllers\"/>
+        <Folder Include="Controllers\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\sport_events.Application.Contracts\SportEvents.Application.Contracts.csproj" />
+      <ProjectReference Include="..\..\Application\sport_events.Application.Models\SportEvents.Application.Models.csproj" />
     </ItemGroup>
 
 </Project>
