Changed database name in config

--- a/sport_events/src/sport_events/appsettings.json
+++ b/sport_events/src/sport_events/appsettings.json
@@ -5,7 +5,7 @@
       "Postgres": {
         "Host": "localhost",
         "Port": 5432,
-        "Database": "sample",
+        "Database": "database",
         "Username": "root",
         "Password": "ChangeMe",
         "SslMode": "Prefer",
