--- a/SportEvents/src/SportEvents/appsettings.json
+++ b/SportEvents/src/SportEvents/appsettings.json
@@ -3,13 +3,7 @@
   "Infrastructure": {
     "Persistence": {
       "Postgres": {
-        "Host": "localhost",
-        "Port": 5432,
-        "Database": "sport_events",
-        "Username": "root",
-        "Password": "ChangeMe",
-        "SslMode": "Prefer",
-        "Pooling": true
+        "ConnectionString": "Host=127.0.0.1;Port=5432;Database=sport_events;Username=root;Password=ChangeMe;"
       }
     },
   },
@@ -31,7 +25,7 @@
     "Endpoints": {
       "gRPC": {
         "Url": "http://*:8070",
-        "Protocols": "Http2"
+        "Protocols": "Http1AndHttp2"
       }
     }
   },
