--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,12 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_DB: database
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: ChangeMe
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/data/postgres
     ports:
-      - "5432:5432"
+      - "6432:5432"
 
   pgadmin:
     image: dpage/pgadmin4
