Fixed repos and update requests

--- a/SportEvents/src/SportEvents/appsettings.json
+++ b/SportEvents/src/SportEvents/appsettings.json
@@ -3,7 +3,13 @@
   "Infrastructure": {
     "Persistence": {
       "Postgres": {
-        "ConnectionString": "Host=127.0.0.1;Port=5432;Database=sport_events;Username=root;Password=ChangeMe;"
+        "Host": "localhost",
+        "Port": 6432,
+        "Database": "sport_events",
+        "Username": "postgres",
+        "Password": "postgres",
+        "SslMode": "Prefer",
+        "Pooling": true
       }
     },
   },
