--- a/SportEvents/src/Application/SportEvents.Application/SportEvents.Application.csproj
+++ b/SportEvents/src/Application/SportEvents.Application/SportEvents.Application.csproj
@@ -6,7 +6,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Events\Queries\" />
     </ItemGroup>
 
 </Project>
