--- a/SportEvents/src/Infrastructure/SportEvents.Infrastructure.Persistence/SportEvents.Infrastructure.Persistence.csproj
+++ b/SportEvents/src/Infrastructure/SportEvents.Infrastructure.Persistence/SportEvents.Infrastructure.Persistence.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Itmo.Dev.Platform.Postgres" />
+        <PackageReference Include="MediatR" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
     </ItemGroup>
 
