--- a/SportEvents/src/Application/SportEvents.Application.Contracts/SportEvents.Application.Contracts.csproj
+++ b/SportEvents/src/Application/SportEvents.Application.Contracts/SportEvents.Application.Contracts.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <ProjectReference Include="..\SportEvents.Application.Models\SportEvents.Application.Models.csproj"/>
+      <PackageReference Include="MediatR" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\SportEvents.Application.Models\SportEvents.Application.Models.csproj" />
     </ItemGroup>
 
 </Project>
