--- a/SportEvents/src/SportEvents/SportEvents.csproj
+++ b/SportEvents/src/SportEvents/SportEvents.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <ItemGroup>
-        <ProjectReference Include="..\Application\SportEvents.Application\SportEvents.Application.csproj"/>
-        <ProjectReference Include="..\Infrastructure\SportEvents.Infrastructure.Persistence\SportEvents.Infrastructure.Persistence.csproj"/>
+        <ProjectReference Include="..\Application\SportEvents.Application\SportEvents.Application.csproj" />
+        <ProjectReference Include="..\Infrastructure\SportEvents.Infrastructure.Persistence\SportEvents.Infrastructure.Persistence.csproj" />
         <ProjectReference Include="..\Presentation\SportEvents.Presentation.Http\SportEvents.Presentation.Http.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Itmo.Dev.Platform.Logging"/>
+        <PackageReference Include="Itmo.Dev.Platform.Logging" />
+        <PackageReference Include="MediatR" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
     </ItemGroup>
