--- a/SportEvents/src/Presentation/SportEvents.Presentation.Http/SportEvents.Presentation.Http.csproj
+++ b/SportEvents/src/Presentation/SportEvents.Presentation.Http/SportEvents.Presentation.Http.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Application\SportEvents.Application.Contracts\SportEvents.Application.Contracts.csproj" />
+	  <ProjectReference Include="..\..\Application\SportEvents.Application\SportEvents.Application.csproj" />
       <ProjectReference Include="..\..\Infrastructure\SportEvents.Infrastructure.Persistence\SportEvents.Infrastructure.Persistence.csproj" />
     </ItemGroup>
 
