--- a/SportEvents/src/Presentation/SportEvents.Presentation.Http/SportEvents.Presentation.Http.csproj
+++ b/SportEvents/src/Presentation/SportEvents.Presentation.Http/SportEvents.Presentation.Http.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Folder Include="Controllers\" />
+        <Folder Include="Новая папка\" />
     </ItemGroup>
 
     <ItemGroup>
